--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,13 @@ button {
     margin: 3em;
     padding: 2em 5em;
     background-color: white;
-    border-style: solid;
     border-color: black;
 }
 
 .display {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 300px;
     background-color: black;
 }
